# verichain

./: .dockerignore  .env.backup  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  debug-env.js  dfx.json  docker-compose.yml  mops.toml  package-lock.json  package.json
docs/: API.md  DEVELOPMENT.md  MODEL.md
scripts/: build.sh  clean-setup.sh  demo-streaming-init.sh  deploy.sh  dev.sh  final-integration-test.sh  model-setup.sh  reset-setup.sh  setup-model-complete.sh  setup.sh  test-error-recovery.sh  test-performance-advanced.sh  test-performance.sh  test-social-media.sh  test.sh  upload-model.sh
src/ai_canister/: Cargo.toml  ai_canister.did
src/ai_canister/assets/: model_metadata.json
src/ai_canister/src/: ai_canister.did  handlers.rs  lib.rs  state.rs  upload_chunks.rs
src/ai_canister/src/handlers/: analysis.rs  mod.rs  model_management.rs  system.rs
src/ai_canister/src/model/: mod.rs  verichain_model.rs
src/ai_canister/src/models/: deepfake_detector.rs  detector.rs  inference.rs  metadata.rs  mod.rs  onnx_model.rs
src/ai_canister/src/preprocessing/: image.rs
src/ai_canister/src/storage/: mod.rs  model_storage.rs
src/ai_canister/src/types/: analysis.rs  api_types.rs  media_types.rs  mod.rs  model.rs  prediction.rs  result.rs  status.rs  system_types.rs  user_types.rs
src/ai_canister/src/utils/: hash.rs  media_processor.rs  mod.rs  performance.rs  social_media_parser.rs  validation.rs
src/frontend/: index.html  package.json  (+1 more)
src/frontend(1)/: index.html  package.json  vite.config.js
tools/: model_chunker.py
(+92 files in other folders)
