[package]
name = "ai_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.19.0-beta.1"
ic-cdk-macros = "0.19.0-beta.1"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.21"
tokio = { version = "1", default-features = false, features = ["rt","time","macros","sync"] }
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opencv = "0.88"